syntax = "proto3";

package proto;

service OTCService {
    rpc OrderTimeoutCallback (OrderTimeoutCallbackReq) returns (BoolResp) {}
}

message BoolResp {
    bool ok = 1;
}

message OrderTimeoutCallbackReq {
    int32 callback_type = 1;
    string sn = 2;
    int32 scene = 3;
}